@@ -86,6 +86,7 @@ _ Mar 22, 2018
 * Bug Fix: Infinitely zooming text on rotation of post composer
 * Bug Fix: Post composer buttons not zooming
 * Bug Fix: Thread highlighter not highlighting in expanded posts
+* Bug Fix: lol tag button was appearing in SMs
 
 $ 5.6.1
 % v 5.6.1
